Fix feet positions on mobile

--- a/css/_backgrounds.scss
+++ b/css/_backgrounds.scss
@@ -214,7 +214,7 @@
 			width: 100%;
 			background-color: #E9B54A;
 			text-align: center;
-			margin: 10rem 0 3rem 0;
+			margin: 9rem 0 2rem 0;
 			img {
 				height: 12rem;
 				width: auto;
